# S0012E-Engine

./: CMakeLists.txt  LICENSE  README.md  authors.txt
engine/: config.cc  config.h
engine/core/: CMakeLists.txt  cvar.cc  debug.cc  debug.h  idpool.h  random.cc  random.h
engine/render/: CMakeLists.txt  cameramanager.cc  cameramanager.h  debugrender.cc  debugrender.h  gltf.h  lightserver.cc  lightserver.h  lightsources.h  model.cc  model.h  particlesystem.cc  particlesystem.h  physics.cc  physics.h  renderdevice.cc  renderdevice.h  resourceid.h  shaderresource.cc  shaderresource.h  stb_image.h  textureresource.cc  textureresource.h  window.cc  window.h
engine/render/input/: gamepad.cc  gamepad.h  inputserver.cc  inputserver.h  key.cc  key.h  keyboard.h  mouse.h
exts/: CMakeLists.txt
exts/enet/: CMakeLists.txt
exts/enet/include/enet/: win32.h
exts/flatbuffers/: CMakeLists.txt
exts/glfw/: CMakeLists.txt
exts/glm/: CMakeLists.txt
exts/soloud/contrib/: CMakeLists.txt  Configure.cmake  src.cmake
projects/spacegame/: CMakeLists.txt
projects/spacegame/code/: main.cc  spacegameapp.cc  spacegameapp.h  spaceship.cc  spaceship.h
